# td-gammon

./: .gitignore  LICENSE  README.md  pyproject.toml  report.txt
src/: main.py  play_human.py
src/backgammon/: backgammon_game.py  board.py  test_backgammon_game.py  test_board.py
src/backgammon/agent/: agent.py  human_agent.py  random_agent.py  td_agent.py
src/backgammon_geobadita/: backgammon_game.py  board.py  test_backgammon_game.py  test_board.py
src/backgammon_geobadita/agent/: agent.py  human_agent.py  random_agent.py  td_agent.py
src/model/: model.py  model_tf.py
src/model/checkpoints/: comments.txt  test_20230406_0038_15_373435_1000.tar  test_20230406_0044_27_025833_2000.tar  test_20230406_0055_55_850591_3000.tar  test_20230406_0112_58_257929_4000.tar  test_20230406_0138_36_144189_5000.tar  test_20230406_0145_29_388515_6000.tar  test_20230406_0152_08_165808_7000.tar  test_20230406_0158_44_870112_8000.tar  test_20230406_0205_09_765393_9000.tar  test_20230406_0339_22_844372_10000.tar  test_20230406_0357_20_243751_10000.tar
src/model/models/: td_gammon.pb
src/model/summaries/1681098370/: events.out.tfevents.1681098378.Marin-Georgians-MacBook-Pro.local
src/model_geobadita/: model_tf.py
src/td_gammon_geobadita.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
